# polymoly

./: LICENSE  README.md  main.py  pyproject.toml  scan_arbs.py
algos/: __init__.py  arb_backtest.py  arb_scanner.py  auto_executor.py  combinatorial_arb.py  dml_noise_filter.py  hierarchical_bayes.py  mamba_architecture.py  polymarket_client.py
data/snapshots/: snapshot_1776525958.json  snapshot_1776526404.json
